﻿v0.5.2
* Change: Simplified naming to King Boss Mods (KBM).
* Change: Increased Vladmal Prime's Ancient Flames timer by 1s.
* Added: Vladmal Prime: Personal Screen alert for Ancient Flames (orange).

----
v0.5.1
* Change: Attempt to fix Sicaron's Unholy Contract, 12 second solid blue personal alert.
* Change: Unholy Contract timer should now trigger from the emote, instead of from the buff.
* Change: Changed T-SM for Matron Zamira, was incorrect for German clients.
* Change: Dark Concussion changed to a Damage trigger.
* Change: Dark Concussion timer reduced to 13 seconds.
----
v0.5.0
* Fixed: Tank-Swap error spam when there's no stack info.
* Fixed: Personal screen alert for Matron, wasn't registering UnitID for the player.
* Fixed: Garua error report at the start of the fight. Gone.
* Fixed: Incorrect wording for Bloodtide trigger.
* Added: Timer for Shadow Strike.
* Change: Revised trigger system to hopefully iron some issues with event spams.
* Change: Inquisitor Garau's Arcane Essence, increased timer by 2.
* Notice: Personal Bubble for Sicaron will need a review, due to inconsistency in API debuff reporting.
----
v0.4.9
* Fixed: Major issue with timers that could start "silently" leaving redundant timers.
* Fixed: Turning the King Monitor off, actually does so now.
* Fixed: King's Monitor now remembers last settings.
* Fixed: Fixed an issue where filtered castbars would throw out timers completely.
* Fixed: Disabled castbars would also disable the timers and screen alerts.
* Change: Options window scrollers are now more responsive.
----
v0.4.8
* Fixed: TankSwap options should now work as intended.
* Fixed: Matron Zamira's Hideous Blast alert.
* Change: Minor adjustments to personal screen alerts engine.
* Change: Anchors should now appear above the options window when visible.
* Added: Sicaron: German Translation for Unholy Contract.
* Added: Akylios: German Translations for Tidal Waves.
* Added: Matron Zamira: German Translation for Mark of Oblivion.